# aleph-rs

./: .dockerignore  Cargo.toml  Justfile  README.md
crates/aleph-ccn/: Cargo.toml  README.md
crates/aleph-ccn/docs/: NODE_SETUP.md
crates/aleph-ccn/examples/: build_router.rs
crates/aleph-ccn/migrations/: V0001__initial_migration_to_postgres.sql  V0002__programs.sql  V0003__balances.sql  V0004__error_codes.sql  V0005__program_versions.sql  V0006__exponential_retries.sql  V0007__balance_views.sql  V0008__trusted_messages.sql  V0009__file_pin_owner_index.sql  V0010__address_stats_view.sql  V0011__split_sync_and_message_chain_sync_statuses.sql  V0012__indexer_sync_status.sql  V0013__messages_post_index.sql  V0014__message_content_in_file_pins.sql  V0015__file_size_not_null.sql  V0016__fix_ipfs_files_size.sql  V0017__vm_instances.sql  V0018__fix_vm_cost_view.sql  V0019__tx_hash_in_rejected_messages.sql  V0020__grace_period_file_pins.sql  V0021__ccn_metric_view.sql  V0022__fix_vm_costs_view.sql  V0023__add_trusted_execution_fields_to_vms.sql  V0024__update_price_instance.sql  V0025__update_vms_tables.sql  V0026__fix_join_exclude_vm_without_volume.sql  V0027__add_pending_messages_origin.sql  V0028__fix_add_unique_constraint_on_pending_messages.sql  V0029__fix_uniqueconstraint_should_have_sender_item_hash_signature.sql  V0030__add_new_error_code_on_db.sql  V0031__fix_compute_message_status_on_vm_cost_view.sql  V0032__fix_duplicated_forgotten_messages.sql  V0033__calculate_costs_statically.sql  V0034__balance_tracker.sql  V0035__add_pending_message_index_on_time_field.sql  V0036__add_credit_balances_table.sql  V0037__add_cost_credit_column.sql  V0038__add_credit_balance_cron_job.sql  V0039__add_credit_history_expiration_date_index.sql  V0040__rename_credit_history_ratio_to_price.sql  (+21 more)
crates/aleph-ccn/src/: error.rs  lib.rs  main.rs  network.rs  repair.rs  storage.rs
crates/aleph-ccn/src/chains/: abc.rs  avalanche.rs  bsc.rs  chain_data_service.rs  common.rs  connector.rs  cosmos.rs  ethereum.rs  evm.rs  indexer_reader.rs  mod.rs  nuls.rs  nuls2.rs  nuls_aleph_sdk.rs  signature_verifier.rs  solana.rs  substrate.rs  tezos.rs
crates/aleph-ccn/src/config/: defaults.rs  mod.rs  settings.rs
crates/aleph-ccn/src/db/: mod.rs
crates/aleph-ccn/src/handlers/: message_handler.rs  mod.rs
crates/aleph-ccn/src/jobs/: fetch_pending_messages.rs  job_utils.rs  mod.rs  process_pending_messages.rs  process_pending_txs.rs  reconnect_ipfs.rs
crates/aleph-ccn/src/permissions/: mod.rs
crates/aleph-ccn/src/schemas/: addresses_query_params.rs  base_messages.rs  cost_estimation_messages.rs  credit_transfer.rs  message_confirmation.rs  message_content.rs  messages_query_params.rs  mod.rs  pending_messages.rs
crates/aleph-ccn/src/services/: cost.rs  cost_validation.rs  keys.rs  mod.rs  pricing_utils.rs  utils.rs
crates/aleph-ccn/src/toolkit/: aggregates.rs  batch.rs  constants.rs  costs.rs  cursor.rs  ecdsa.rs  json.rs  metrics_keys.rs  mod.rs  partitions.rs  rabbitmq.rs  range.rs  split.rs  timestamp.rs
crates/aleph-ccn/src/types/: chain_sync.rs  channel.rs  content_format.rs  cost.rs  files.rs  message_processing_result.rs  message_status.rs  mod.rs  protocol.rs  (+2 more)
crates/aleph-ccn/tests/: api_accounts.rs  api_address_stats.rs  api_aggregates.rs  api_authorizations.rs  api_balance.rs  api_costs.rs  api_cursor_pagination.rs  api_ipfs.rs  api_list_messages.rs  api_messages.rs  api_new_metric.rs  api_p2p.rs  api_posts.rs  api_pricing_recalculation.rs  api_storage.rs  api_version.rs  auth_middleware.rs  balances_lifecycle.rs  chain_data_service.rs  cost_smoke.rs  db_accounts.rs  db_address_stats.rs  db_aggregates.rs  db_authorizations.rs  db_chains.rs  db_cost.rs  db_credit_balances.rs  db_error_codes.rs  db_files.rs  db_messages.rs  db_peers.rs  db_pending_messages.rs  db_pending_txs.rs  db_posts.rs  db_smoke.rs  garbage_collector.rs  indexer_reader.rs  ingestion.rs  job_balance.rs  job_cron.rs  (+20 more)
crates/aleph-cid/: Cargo.toml
crates/aleph-cid-python/: Cargo.toml  README.md  aleph_cid.pyi  pyproject.toml
crates/aleph-cid-python/src/: lib.rs
crates/aleph-cid-python/tests/: test_aleph_cid.py
crates/aleph-cid/proto/: merkledag.proto  unixfs.proto
crates/aleph-cid/src/: car.rs  cid.rs  folder_hash.rs  lib.rs  verify.rs
crates/aleph-cid/tests/: car_roundtrip.rs  folder_hash.rs  regen-car-goldens.sh  regen-folder-hash-goldens.sh
crates/aleph-cli/: Cargo.toml  build.rs
crates/aleph-cli/src/: account.rs  cli.rs  common.rs  main.rs  sevctl.rs
crates/aleph-cli/tests/: aggregate_edit_integration.rs  domain_integration.rs  file_car_upload_integration.rs  file_pin_integration.rs  file_upload_integration.rs  program_dry_run.rs  sigint_exit.rs  website_integration.rs
crates/aleph-microvm/: Cargo.toml
crates/aleph-microvm/src/: asgi.rs  cache.rs  config.rs  error.rs  firecracker.rs  lib.rs  preflight.rs  protocol.rs  server.rs  vsock.rs
crates/aleph-microvm/tests/: asgi_translation.rs  e2e_boot.rs  protocol_roundtrip.rs  vsock_framing.rs
crates/aleph-sdk/: Cargo.toml  README.md  build.rs
crates/aleph-sdk/src/: authorization.rs  builder.rs  caching_aggregate_client.rs  car.rs  client.rs  confidential.rs  corechannel.rs  credit.rs  credit_transfer.rs  crn.rs  crns_list.rs  folder_hash.rs  ipfs.rs  lib.rs  messages.rs  progress.rs  scheduler.rs  scheduler_ws.rs  ssh.rs  upload_timeout.rs  verify.rs  ws.rs
crates/aleph-sdk/tests/: car_roundtrip.rs  credit_integration.rs  folder_hash.rs  hamt_collision_a.txt  hamt_collision_b.txt  heph_integration.rs  ipfs_authenticated_upload.rs  ipfs_car_upload.rs  ipfs_upload.rs  regen-car-goldens.sh  regen-folder-hash-goldens.sh  sign_message.rs  swap_integration.rs  uniswap_integration.rs
crates/aleph-types/: Cargo.toml  README.md
crates/aleph-types/src/: chain.rs  channel.rs  cid.rs  item_hash.rs  lib.rs  memory_size.rs  storage_size.rs  timestamp.rs
crates/heph/: Cargo.toml  Dockerfile  README.md
crates/heph/src/: config.rs  corechannel.rs  cost.rs  cursor.rs  files.rs  lib.rs  main.rs  permissions.rs
crates/heph/tests/: integration.rs
(+251 files in other folders)
