[workspace]
resolver = "2"
members = [
    "crates/aleph-cli",
    "crates/aleph-sdk",
    "crates/aleph-types",
]

[workspace.dependencies]
aleph-sdk = { path = "crates/aleph-sdk", version = "0.7.1" }
aleph-types = { path = "crates/aleph-types", version = "0.7.1" }
memsizes = { version = "1.0.0", features = ["serde"] }
async-trait = { version = "0.1" }
anyhow = { version = "1.0.100" }
bs58 = { version = "0.5" }
bytes = { version = "1" }
assert_matches = { version = "1.5.0" }
chrono = { version = "0.4.42" }
clap = { version = "4.5.51", features = ["derive"] }
futures-util = { version = "0.3" }
http = { version = "1" }
reqwest = { version = "0.13.2", features = ["json", "stream"] }
reqwest-middleware = { version = "0.5.1", features = ["json", "query"] }
reqwest-retry = { version = "0.9.1", default-features = false }
rstest = { version = "0.26.1" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
serde_qs = { version = "0.13" }
serde_with = "3.15.1"
sha2 = { version = "0.10.9" }
thiserror = { version = "2.0.17" }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros", "fs", "sync"]  }
tokio-stream = { version = "0.1" }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
url = { version = "2.5.7" }
cid = { version = "0.11" }
multihash = { version = "0.19" }
multihash-codetable = { version = "0.1", features = ["sha2"] }
prost = { version = "0.13" }
prost-build = { version = "0.13" }
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
secrecy = "0.10"
sha3 = { version = "0.10" }
zeroize = "1"
hex = { version = "0.4" }
