[workspace]
resolver = "2"
members = [
    "crates/aleph-cid",
    "crates/aleph-cli",
    "crates/aleph-sdk",
    "crates/aleph-types",
    "crates/heph",
]
# The PyO3 binding crate is built by maturin, not cargo: its
# `extension-module` feature would break test linking for the rest of the
# workspace, so it lives outside it with its own lockfile.
exclude = ["crates/aleph-cid-python"]

[workspace.dependencies]
aes = { version = "0.8" }
aleph-cid = { path = "crates/aleph-cid", version = "0.1.0" }
aleph-sdk = { path = "crates/aleph-sdk", version = "0.13.0" }
aleph-types = { path = "crates/aleph-types", version = "0.13.0" }
# Individual alloy sub-crates instead of the `alloy` umbrella so we can pin
# each to its own minor line and avoid pulling in consensus/blob/genesis
# types we don't use.
alloy-primitives = { version = "1.5" }
alloy-sol-types = { version = "1.5" }
alloy-contract = { version = "1.8" }
alloy-provider = { version = "1.8" }
alloy-network = { version = "1.8" }
alloy-signer = { version = "1.8" }
alloy-signer-local = { version = "1.8" }
alloy-rpc-types-eth = { version = "1.8" }
alloy-node-bindings = { version = "1.8" }
memsizes = { version = "1.0.0", features = ["serde"] }
murmur3 = { version = "0.5" }
async-trait = { version = "0.1" }
anyhow = { version = "1.0.100" }
async-stream = { version = "0.3" }
bs58 = { version = "0.5" }
bytes = { version = "1" }
assert_matches = { version = "1.5.0" }
chrono = { version = "0.4.42" }
clap = { version = "4.5.51", features = ["derive", "env"] }
futures-util = { version = "0.3" }
http = { version = "1" }
reqwest = { version = "0.13.2", features = ["json", "stream", "multipart"] }
reqwest-middleware = { version = "0.5.1", features = ["json", "query", "multipart"] }
reqwest-retry = { version = "0.9.1", default-features = false }
rstest = { version = "0.26.1" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
serde_qs = { version = "0.13" }
serde_with = "3.15.1"
sha2 = { version = "0.10.9" }
tar = { version = "0.4" }
thiserror = { version = "2.0.17" }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros", "fs", "sync", "time"]  }
tokio-stream = { version = "0.1" }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
tokio-util = { version = "0.7", features = ["io"] }
url = { version = "2.5.7" }
cid = { version = "0.11" }
multihash = { version = "0.19" }
multihash-codetable = { version = "0.1", features = ["sha2"] }
prost = { version = "0.13" }
directories = { version = "6" }
keyring = { version = "3.6" }
rpassword = { version = "7" }
rand = { version = "0.8" }
toml = { version = "0.8" }
tempfile = { version = "3" }
static_assertions = { version = "1" }
subtle = { version = "2" }
walkdir = { version = "2" }
which = { version = "6" }
wiremock = { version = "0.6" }
# `zeroize` is requested explicitly so that `SigningKey: ZeroizeOnDrop` (which
# wipes the secret scalar on drop) follows from our own dependency declaration.
# It is currently also force-enabled by ed25519-dalek's `alloc`/`std` feature,
# but that is an upstream implementation detail we don't want our key-wiping
# guarantee to silently rely on. The compile-time assertion in account/solana.rs
# is the backstop if the impl ever disappears.
ed25519-dalek = { version = "2", default-features = false, features = ["std", "rand_core", "zeroize"] }
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
base64 = { version = "0.22" }
p256 = { version = "0.13", features = ["ecdsa"] }
sha3 = { version = "0.10" }
scrypt = { version = "0.11", default-features = false }
pbkdf2 = { version = "0.12" }
hex = { version = "0.4" }
hmac = { version = "0.12" }
zeroize = { version = "1" }
coins-ledger = { version = "0.13" }
dialoguer = { version = "0.11" }
ctr = { version = "0.9" }
ctrlc = { version = "3.4" }
libc = { version = "0.2" }
zip = { version = "2", default-features = false, features = ["deflate"] }

# scrypt at keystore-grade parameters is unusably slow in unoptimized debug
# builds (tests, `cargo run` during development). Always optimize the crypto
# kernels; the test profile inherits these overrides.
[profile.dev.package.scrypt]
opt-level = 3
[profile.dev.package.salsa20]
opt-level = 3
[profile.dev.package.pbkdf2]
opt-level = 3
[profile.dev.package.sha2]
opt-level = 3
[profile.dev.package.hmac]
opt-level = 3
