[package]
name = "aleph-cid"
version = "0.12.0"
edition = "2024"
description = "kubo-compatible IPFS CID computation for Aleph Cloud: UnixFS dag-pb hashing, HAMT-sharded directories and CARv1 framing."
license = "MIT"
repository = "https://github.com/aleph-im/aleph-rs"
homepage = "https://github.com/aleph-im/aleph-rs"

[dependencies]
# Only `cid` and `item_hash` are used; default features would pull in the
# signature/crypto stack, which this crate must stay free of (it is the
# foundation for FFI bindings).
aleph-types = { path = "../aleph-types", version = "0.12.0", default-features = false }
bs58 = { workspace = true }
cid = { workspace = true }
multihash = { workspace = true }
murmur3 = { workspace = true }
prost = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
multihash-codetable = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
