[package]
name = "aleph-cid"
version = "0.1.0"
edition = "2024"
description = "kubo-compatible IPFS CID computation for Aleph Cloud: UnixFS dag-pb hashing, HAMT-sharded directories and CARv1 framing."
license = "MIT"
repository = "https://github.com/aleph-im/aleph-rs"
homepage = "https://github.com/aleph-im/aleph-rs"

[dependencies]
bs58 = { workspace = true }
cid = { workspace = true }
multihash = { workspace = true }
murmur3 = { workspace = true }
prost = { workspace = true }
serde = { workspace = true, optional = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }

[features]
default = []
# serde impls for `cid::Cid` (string round-trip). Enabled by aleph-types.
serde = ["dep:serde"]

[dev-dependencies]
multihash-codetable = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
