[package]
name = "aleph-cli"
version = "0.8.1"
edition = "2024"
description = "Minimal CLI for Aleph Cloud, built in Rust."
license = "MIT"
repository = "https://github.com/aleph-im/aleph-rs"
homepage = "https://github.com/aleph-im/aleph-rs"

[dependencies]
aleph-sdk = { workspace = true, features = ["account-evm", "account-sol"] }
aleph-types = { workspace = true, features = ["account"] }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
memsizes = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
directories = { workspace = true }
rpassword = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
k256 = { workspace = true }
ed25519-dalek = { workspace = true }
futures-util = { workspace = true }
zeroize = { workspace = true }
coins-ledger = { workspace = true }
dialoguer = { workspace = true }
bs58 = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { workspace = true, features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { workspace = true, features = ["async-secret-service", "crypto-rust"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { workspace = true, features = ["windows-native"] }

[dev-dependencies]
tempfile = { workspace = true }

[package.metadata.deb]
maintainer = "Aleph.im <contact@aleph.im>"
section = "utils"
priority = "optional"
assets = [
    ["target/release/aleph", "usr/bin/", "755"],
]

[[bin]]
name = "aleph"
path = "src/main.rs"
