[package]
name = "aleph-cli"
version = "0.10.2"
edition = "2024"
description = "Minimal CLI for Aleph Cloud, built in Rust."
license = "MIT"
repository = "https://github.com/aleph-im/aleph-rs"
homepage = "https://github.com/aleph-im/aleph-rs"

[dependencies]
aleph-sdk = { workspace = true, features = ["account-evm", "account-sol", "credits"] }
alloy-network = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-signer-local = { workspace = true }
aleph-types = { workspace = true, features = ["account"] }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
clap_complete = "4.5"
memsizes = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
url = { workspace = true }
directories = { workspace = true }
rpassword = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
k256 = { workspace = true }
ed25519-dalek = { workspace = true }
futures-util = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
tokio-stream = { workspace = true }
bytes = { workspace = true }
zeroize = { workspace = true }
coins-ledger = { workspace = true }
dialoguer = { workspace = true, features = ["fuzzy-select"] }
bs58 = { workspace = true }
walkdir = { workspace = true }
ctrlc = { workspace = true }
zip = { workspace = true }
tempfile = { workspace = true }
base64 = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { workspace = true, features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { workspace = true, features = ["async-secret-service", "crypto-rust"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { workspace = true, features = ["windows-native"] }

[dev-dependencies]
tempfile = { workspace = true }
heph = { path = "../heph" }
actix-web = "4"
wiremock = { workspace = true }
insta = { version = "1", features = ["json"] }

[package.metadata.deb]
maintainer = "Aleph.im <contact@aleph.im>"
section = "utils"
priority = "optional"
assets = [
    ["target/release/aleph", "usr/bin/", "755"],
]

[[bin]]
name = "aleph"
path = "src/main.rs"
