[package]
name = "aleph-sdk"
version = "0.9.2"
edition = "2024"
description = "Aleph Cloud SDK for client applications."
license = "MIT"
repository = "https://github.com/aleph-im/aleph-rs"
homepage = "https://github.com/aleph-im/aleph-rs"

[dependencies]
aleph-types = { workspace = true }
alloy = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
bs58 = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
cid = { workspace = true }
multihash = { workspace = true }
multihash-codetable = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
futures-util = { workspace = true }
http = { workspace = true }
memsizes = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
serde_with = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-stream = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
hex = { workspace = true }
p256 = { workspace = true }
prost = { workspace = true }

[features]
default = []
account-evm = ["aleph-types/account-evm"]
account-sol = ["aleph-types/account-sol"]
