[package]
name = "aleph-sdk"
version = "0.9.2"
edition = "2024"
description = "Aleph Cloud SDK for client applications."
license = "MIT"
repository = "https://github.com/aleph-im/aleph-rs"
homepage = "https://github.com/aleph-im/aleph-rs"

[dependencies]
aleph-types = { workspace = true }
# alloy crates are only needed for the `credits` feature (EVM credit
# purchases). Gated so downstream SDK consumers who don't use that flow
# avoid the whole alloy dependency tree.
alloy-contract = { workspace = true, optional = true }
alloy-primitives = { workspace = true, optional = true }
alloy-provider = { workspace = true, optional = true }
alloy-rpc-types-eth = { workspace = true, optional = true }
alloy-sol-types = { workspace = true, optional = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
bs58 = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
cid = { workspace = true }
multihash = { workspace = true }
multihash-codetable = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
futures-util = { workspace = true }
http = { workspace = true }
memsizes = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
serde_with = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-stream = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
walkdir = { workspace = true }
hex = { workspace = true }
p256 = { workspace = true }
prost = { workspace = true }

[dev-dependencies]
alloy-network = { workspace = true }
alloy-node-bindings = { workspace = true }
alloy-signer-local = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }

[features]
default = []
account-evm = ["aleph-types/account-evm"]
account-sol = ["aleph-types/account-sol"]
credits = [
    "dep:alloy-contract",
    "dep:alloy-primitives",
    "dep:alloy-provider",
    "dep:alloy-rpc-types-eth",
    "dep:alloy-sol-types",
]

[[test]]
name = "credit_integration"
required-features = ["credits"]
