[package]
name = "aleph-sdk"
version = "0.15.0"
edition = "2024"
description = "Aleph Cloud SDK for client applications."
license = "MIT"
repository = "https://github.com/aleph-im/aleph-rs"
homepage = "https://github.com/aleph-im/aleph-rs"

[dependencies]
aes = { workspace = true }
aleph-cid = { workspace = true }
aleph-types = { workspace = true }
# alloy crates are only needed for the `credits` and `swap` features (EVM
# credit purchases and token swaps). Gated so downstream SDK consumers who
# don't use those flows avoid the whole alloy dependency tree.
alloy-contract = { workspace = true, optional = true }
alloy-network = { workspace = true, optional = true }
alloy-primitives = { workspace = true, optional = true }
alloy-provider = { workspace = true, optional = true }
alloy-rpc-types-eth = { workspace = true, optional = true }
alloy-signer = { workspace = true, optional = true }
alloy-signer-local = { workspace = true, optional = true }
alloy-sol-types = { workspace = true, optional = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
ctr = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
futures-util = { workspace = true }
http = { workspace = true }
memsizes = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
serde_with = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
p256 = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
alloy-network = { workspace = true }
alloy-node-bindings = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-signer-local = { workspace = true }
# test-util enables tokio's paused-clock test runtime (start_paused) used by the
# upload_timeout policy tests.
tokio = { workspace = true, features = ["test-util"] }
wiremock = { workspace = true }

[features]
default = []
account-evm = ["aleph-types/account-evm"]
account-sol = ["aleph-types/account-sol"]
credits = [
    "dep:alloy-contract",
    "dep:alloy-primitives",
    "dep:alloy-provider",
    "dep:alloy-rpc-types-eth",
    "dep:alloy-sol-types",
]
# EVM token swaps via CoW Swap. Reuses the credit module's amount helpers,
# so it pulls in `credits`.
swap = [
    "credits",
    "dep:alloy-network",
    "dep:alloy-signer",
    "dep:alloy-signer-local",
]
# Gates network-tier integration tests (kept out of plain `cargo test`).
test-helpers = []

[[test]]
name = "credit_integration"
required-features = ["credits"]

[[test]]
name = "ipfs_upload"
required-features = ["test-helpers"]

[[test]]
name = "ipfs_car_upload"
required-features = ["test-helpers"]

[[test]]
name = "swap_integration"
required-features = ["swap"]

[[test]]
name = "uniswap_integration"
required-features = ["swap"]
