[package]
name = "aleph-types"
version = "0.6.0"
edition = "2024"
description = "Definitions for the most commonly used types in the Aleph Cloud network."
license = "MIT"
repository = "https://github.com/aleph-im/aleph-rs"
homepage = "https://github.com/aleph-im/aleph-rs"

[features]
default = ["signature"]
signature = ["dep:k256", "dep:sha3", "dep:hex"]

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
k256 = { workspace = true, optional = true }
sha3 = { workspace = true, optional = true }
hex = { workspace = true, optional = true }

[dev-dependencies]
assert_matches = { workspace = true }
