[package]
name = "aleph-types"
version = "0.9.0"
edition = "2024"
description = "Definitions for the most commonly used types in the Aleph Cloud network."
license = "MIT"
repository = "https://github.com/aleph-im/aleph-rs"
homepage = "https://github.com/aleph-im/aleph-rs"

[features]
default = ["signature"]
signature = ["signature-evm", "signature-sol"]
signature-evm = ["dep:k256", "dep:sha3", "dep:hex"]
signature-sol = ["dep:ed25519-dalek", "dep:bs58"]
account = ["account-evm", "account-sol"]
account-evm = ["signature-evm"]
account-sol = ["signature-sol"]

[dependencies]
chrono = { workspace = true }
memsizes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
k256 = { workspace = true, optional = true }
sha3 = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
ed25519-dalek = { workspace = true, optional = true }
bs58 = { workspace = true, optional = true }


[dev-dependencies]
assert_matches = { workspace = true }
