[package]
name = "heph"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "heph"
path = "src/main.rs"

[dependencies]
aleph-types = { path = "../aleph-types", features = ["account-evm", "signature-sol"] }
actix-web = "4"
actix-cors = "0.7"
actix-multipart = "0.7"
rusqlite = { version = "0.34", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"

futures-util = "0.3"

[dev-dependencies]
aleph-sdk = { path = "../aleph-sdk" }
reqwest = { version = "0.13", features = ["json"] }
tempfile = "3"
url = "2"
